deploy.yml
# Deployment App
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actividad-grupo5-deployment
  labels:
    tier: frontend
    app: nginx
spec:
  selector:
    matchLabels:
      app: app-grupo5
  replicas: 2
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      name: nginx-2
      labels:
        app: app-grupo5
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 80
#          args:
#          - /bin/sh
#          - -c
#          - touch /tmp/healthy; sleep 600
          livenessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            initialDelaySeconds: 5
            periodSeconds: 5 
          volumeMounts:
            - mountPath: /cache
              name: cache-volume
            - mountPath: "/etc/secretos"
              name: secretos
              readOnly: true
      volumes:
      - name: cache-volume
        emptyDir: {}
      - name: secretos
        secret:
          secretName: actividad-grupo5-secret
