service.yaml
# Service
---
apiVersion: v1
kind: Service
metadata:
  name: actividad-grupo5-service
  labels:
    app: actividad-grupo5-service
spec:
  selector:
    app: actividad-grupo5-service
  type: LoadBalancer
  externalIPs:
  - 192.168.64.40
  - 192.168.64.60
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9377
