ingress.yml
# Ingress
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: actividad-grupo5-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: backendgrupo5.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: actividad-grupo5-service
          servicePort: 8083
